package reports;

public interface MissionReport {
}